crates/plotnik-lib/tests/05-typegen/alternations/error_conflicting_capture_types_across_branches.txt
Q = [
  (identifier) @x
  (number)* @x
]
==== diagnostics ====
error: capture `@x` has incompatible types across branches
 --> query.ptk:1:5
  |
1 |   Q = [
  |  _____^
2 | |   (identifier) @x
3 | |   (number)* @x
4 | | ]
  | |_^
  |
help: make every branch produce the same type, or label the branches for a tagged union
